# picam-backend

./: .gitignore  app.py  pyproject.toml  requirements.txt  run.sh
api/: app.py
picam/: ObjectDetector.py  Picam.py  obj_detection.py  optical_flow_fb.py  optical_flow_lk.py
picam_backend/: app.py
temp_sensor/: Temp.py
