[tool.poetry]
name = "picam-backend"
version = "0.1.0"
description = ""
authors = ["Chattox <conradlineker@gmail.com>"]
readme = "README.md"
packages = [{include = "picam_backend"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
